--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "embla-carousel-react": "^8.3.0",
     "express": "^4.18.2",
     "input-otp": "^1.2.4",
+    "link-preview-js": "^3.1.0",
     "lucide-react": "^0.462.0",
     "multer": "^2.0.2",
     "music-metadata-browser": "^2.5.11",
