--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "multer": "^2.0.2",
     "music-metadata-browser": "^2.5.11",
     "next-themes": "^0.3.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
