--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "emoji-mart": "^5.6.0",
     "express": "^4.18.2",
     "input-otp": "^1.2.4",
     "link-preview-js": "^3.1.0",
@@ -95,6 +96,6 @@
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^7.0.6"
+    "vite": "^4.5.2"
   }
 }
